<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.turtlefeeder.MainActivity" >

    <item
        android:id="@+id/edit_bar"
        android:orderInCategory="1"
        android:title="@string/edit_bar"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom|withText"
        />
    
    <item
        android:id="@+id/about_bar"
        android:orderInCategory="4"
        android:title="@string/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        />
    
     
   <item
        android:id="@+id/refresh_bar"
        android:orderInCategory="3"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        />
    
    <item
        android:id="@+id/command_bar"
        android:orderInCategory="2"
        android:title="@string/actionBar"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom|withText"
        ></item>
   

</menu>
